# lr-adaptation

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/exported/tests/: report.html
lr_adaptation/: __init__.py  quadratic.py
src/lr_adaptation/: quadratic.py
tests/: conftest.py  test_quadratic.py
