[project]
authors = [
  {name = "fidero", email = "filip.de.roos@gmail.com"},
  {name = "famura", email = "noreply@famura.net"},
]
dependencies = [
    "torch>=2.7.1,<3.0.0",
]
description = ""
name = "lr-adaptation"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
