[project]
authors = [
  {name = "fidero", email = "filip.de.roos@gmail.com"},
  {name = "famura", email = "noreply@famura.net"},
]
description = ""
license = "MIT"
name = "lr-adaptation"
readme = "README.md"
repository = "https://github.com/fidero/lr-adaptation"
requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
  "torch==2.7.1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.9",
]

[tool.ruff]
line-length = 120
target-version = "py310"
